; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_atari.c_Atari800_SetMachineType.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_atari.c_Atari800_SetMachineType.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@Atari800_machine_type = common dso_local global i32 0, align 4
@Atari800_MACHINE_XLXE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i8* null, align 8
@Atari800_builtin_basic = common dso_local global i8* null, align 8
@Atari800_keyboard_leds = common dso_local global i8* null, align 8
@Atari800_f_keys = common dso_local global i8* null, align 8
@Atari800_jumper = common dso_local global i8* null, align 8
@Atari800_builtin_game = common dso_local global i8* null, align 8
@Atari800_keyboard_detached = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Atari800_SetMachineType(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  store i32 %3, i32* @Atari800_machine_type, align 4
  %4 = load i32, i32* @Atari800_machine_type, align 4
  %5 = load i32, i32* @Atari800_MACHINE_XLXE, align 4
  %6 = icmp ne i32 %4, %5
  br i1 %6, label %7, label %14

7:                                                ; preds = %1
  %8 = load i8*, i8** @FALSE, align 8
  store i8* %8, i8** @Atari800_builtin_basic, align 8
  %9 = load i8*, i8** @FALSE, align 8
  store i8* %9, i8** @Atari800_keyboard_leds, align 8
  %10 = load i8*, i8** @FALSE, align 8
  store i8* %10, i8** @Atari800_f_keys, align 8
  %11 = load i8*, i8** @FALSE, align 8
  store i8* %11, i8** @Atari800_jumper, align 8
  %12 = load i8*, i8** @FALSE, align 8
  store i8* %12, i8** @Atari800_builtin_game, align 8
  %13 = load i8*, i8** @FALSE, align 8
  store i8* %13, i8** @Atari800_keyboard_detached, align 8
  br label %14

14:                                               ; preds = %7, %1
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
